fixed smoke on smallest breakpoint

--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,7 @@ footer a {
 
 @media (max-width: 575px) {
   .smoke-container {
-    top: 13vw;
+    top: 15vw;
     left: .5vw;
     width: 10px;
     height: 10px;
